crates/toml/tests/snapshots/invalid/float/exp-trailing-us-2.stderr
TOML parse error at line 1, column 24
  |
1 | exp-trailing-us-2 = 1.2_e2
  |                        ^
`_` may only go between digits
